add 10 days rule and super admin dashboard endpoint